# workspec

./: .gitignore  .gitmodules  CLAUDE.md  COMPATIBILITY-MATRIX.md  COMPLETED.md  CONVENTIONS.md  Cargo.toml  IDEA_SCRATCH.md  LICENSING.md  LINT-MATRIX.md  MD-INVENTORY.md  Makefile  POSITIONING.md  README.md  RELEASE-STREAMS.md  T1-TODO.md  T4-TODO.md  TODO.md  WOS-FEATURE-MATRIX.md  WOS-IMPLEMENTATION-STATUS.md  architecture-review-handoff.md  counter-proposal-disposition.md  counter-proposal-extra.md  counter-proposal.md  docker-compose.postgres.yml  enterprise-feature-gaps.md  enterprise-implementation-roadmap.md  pyproject.toml  wos-api-coverage-findings.md  wos-formspec-competitive-feature-matrix.xlsx
crates/wos-agent-anthropic/: Cargo.toml
crates/wos-agent-anthropic/src/: lib.rs
crates/wos-agent-claude-sdk/: Cargo.toml
crates/wos-agent-claude-sdk/src/: lib.rs
crates/wos-authoring/: Cargo.toml  README.md
crates/wos-authoring/src/: command.rs  diagnostics.rs  lib.rs  project.rs  raw.rs
crates/wos-authoring/tests/: integration.rs
crates/wos-conformance/: Cargo.toml  README.md
crates/wos-conformance/fixtures/: AI-041-negative-fallback-cycle.json  AI-AUTO-001-escalation-expiry-revocation.json  AI-AUTO-002-drift-alert-demotion.json  G-030-hold-resume.json  K-001-negative-final-transitions.json  K-011-determinism.json  K-011-parallel-join.json  K-020-provenance-completeness-real-binding.json  K-020-provenance-completeness.json  K-033-document-order.json  K-046-timer-provenance.json  K-051-negative-missing-input-binding.json  K-051-negative-unresolved-output-column.json  K-051-negative-unresolved-table-ref.json  K-051-positive-resolved-decision-table-guard.json  K-051-resolved-decision-table-guard.json  K-052-disjoint-unique-rows.json  K-052-negative-overlapping-unique-rows.json  K-052-negative-priority-tie.json  K-052-positive-disjoint-unique-rows.json  K-053-boolean-output-column.json  K-053-negative-collect-hit-policy-on-guard.json  K-053-negative-non-boolean-output.json  K-053-positive-boolean-output-column.json  K-FOREACH-001-iteration-basic.json  K-FOREACH-002-bounded-concurrency.json  K-FOREACH-003-empty-collection.json  K-FOREACH-BODY-001-iteration-body-actions.json  K-FOREACH-COMPOUND-001-compound-body.json  K-FOREACH-OUTPUT-001-collect-strategy.json
crates/wos-conformance/src/: coverage.rs  engine.rs  explain.rs  fixture.rs  formspec_processor.rs  lib.rs  meta.rs  provenance.rs  rules.rs  stubs.rs  trace.rs
crates/wos-conformance/tests/: binary_exit_codes.rs  binding_dispatch.rs  case_boundary_fixtures.rs  cross_stack_fixture_corpus.rs  explain_cli.rs  export_conformance.rs  fixture_shape.rs  formspec_binding_swap.rs  formspec_processor_double.rs  kernel_conformance.rs  migration_conformance.rs  processor_conformance.rs  processor_report_cli.rs  profile_conformance.rs  provenance_tests.rs  r6_restate_conformance_slice.rs  rule_registry.rs  signature_profile.rs  stub_integration.rs  trace_parity.rs
crates/wos-core/: Cargo.toml  README.md
crates/wos-core/src/: autonomy.rs  confidence.rs  context.rs  deontic.rs  eval.rs  eval_mode.rs  event_handler.rs  explain.rs  instance.rs  lib.rs  project.rs  provenance.rs  provenance_tests.rs  proxy.rs  studio_api.rs  timer.rs  typeid.rs
crates/wos-core/tests/: ai_deser.rs  business_calendar_deser.rs  evaluator.rs  governance_deser.rs  hold_type_schema_enum.rs  instance_deser.rs  kernel_deser.rs  notification_template_deser.rs  transition_event.rs
crates/wos-events/: Cargo.toml
crates/wos-events/src/: custody.rs  lib.rs
crates/wos-export/: Cargo.toml
crates/wos-export/src/: lib.rs  ocel.rs  prov_o.rs  xes.rs
crates/wos-formspec-binding/: Cargo.toml
crates/wos-formspec-binding/src/: lib.rs
crates/wos-formspec-binding/tests/: canonical_digest_matches_integrity_canonical.rs  replay_pin_enforcement.rs  runtime_intake_workflow_alias.rs
crates/wos-lint/: Cargo.toml  MIGRATION.md  README.md
crates/wos-mcp/: Cargo.toml  NOTES.md  README.md
crates/wos-runtime/: Cargo.toml
crates/wos-server/: COMPLETE.md  Cargo.toml  PARITY.md  README.md  TODO.md  VISION.md
crates/wos-server-auth-jwt/: Cargo.toml
crates/wos-server-ports/: AUTHORING.md  Cargo.toml
crates/wos-server-postgres/: Cargo.toml  README.md
crates/wos-server-runtime-local/: Cargo.toml
crates/wos-server-runtime-restate/: Cargo.toml  README.md
crates/wos-server-sqlite/: Cargo.toml
crates/wos-synth/: Cargo.toml  README.md
crates/wos-synth-anthropic/: Cargo.toml
crates/wos-synth-cli/: Cargo.toml
crates/wos-synth-core/: Cargo.toml  README.md
crates/wos-synth-mock/: Cargo.toml
crates/wos-synth-spike/: Cargo.toml
studio/: .env.example  CLAUDE.md  CONCEPT-MODEL.md  Cargo.toml  DEFERRED.md  HANDOFF.md  README.md  STUDIO-LINT-MATRIX.md  VISION.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  server.ts  tsconfig.json  vite.config.ts
studio/examples/: README.md
studio/schemas/: wos-studio-approval.schema.json  wos-studio-binding.schema.json  wos-studio-common.schema.json  wos-studio-effectiveness.schema.json  wos-studio-identity-subject.schema.json  wos-studio-mapping.schema.json  wos-studio-migration-path.schema.json  wos-studio-policy-object.schema.json  wos-studio-provenance.schema.json  wos-studio-readiness.schema.json  wos-studio-scenario.schema.json  wos-studio-source.schema.json  wos-studio-terminology-map.schema.json  wos-studio-workflow-intent.schema.json  wos-studio-workspace.schema.json
studio/scripts/: generate-wos-types.ts
studio/specs/: README.md  authoring-provenance.md  binding-and-integration.md  change-impact.md  compiler-contract.md  effectiveness-and-applicability.md  identity-and-attestation.md  policy-object-model.md  readiness-validation.md  reference-architecture.md  review-and-approval.md  runtime-observation-seam.md  scenario-authoring.md  source-vault.md  stage-8-vertical-slice.md  studio-to-wos-mapping.md  terminology-and-canonical-vocabulary.md  workflow-intent.md  workspace.md
studio/src/: App.tsx  main.tsx  types.ts
studio/tests/: pending_ratchet.py
(+1216 files in other folders)
