[workspace]
members = [
    "crates/wos-core",
    "crates/wos-lint",
    "crates/wos-conformance",
    "crates/wos-runtime",
    "crates/wos-formspec-binding",
    "crates/wos-export",
    "crates/wos-server",
    "crates/wos-server-ports",
    "crates/wos-server-sqlite",
    "crates/wos-server-auth-jwt",
    "crates/wos-server-auth-mock",
    "crates/wos-server-runtime-local",
    "crates/wos-server-postgres",
    "crates/wos-server-audit-postgres",
    "crates/wos-server-runtime-restate",
    "crates/wos-synth-spike",
    "crates/wos-synth-core",
    "crates/wos-synth-mock",
    "crates/wos-synth-anthropic",
    "crates/wos-synth-cli",
    "crates/wos-authoring",
    "crates/wos-mcp"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

# fel-core lives in the Formspec monorepo. Two checkout layouts supported:
#   1. As a submodule of this repo at `formspec/crates/fel-core` (the default
#      since 2026-05-02; `git submodule update --init --recursive` populates it).
#   2. As the parent monorepo at `../crates/fel-core` when this tree is
#      checked out as `formspec/wos-spec/` inside it.
[workspace.dependencies]
fel-core = { path = "formspec/crates/fel-core" }

[profile.dev]
# Trim debug metadata and increase codegen parallelism for faster compile-test loops.
debug = 1
incremental = true
codegen-units = 256

[profile.test]
# Keep tests debuggable while reducing compile overhead.
debug = 1
incremental = true
codegen-units = 256
