[workspace]
members = [
    "crates/wos-core",
    "crates/wos-events",
    "crates/wos-lint",
    "crates/wos-conformance",
    "crates/wos-runtime",
    "crates/wos-formspec-binding",
    "crates/wos-export",
    # wos-server* crates relocated to workspec-server (chore 3.2)
    "crates/wos-synth-spike",
    "crates/wos-synth-core",
    "crates/wos-synth-mock",
    "crates/wos-synth-anthropic",
    "crates/wos-synth-cli",
    "crates/wos-authoring",
    "crates/wos-mcp",
    "crates/wos-agent-stub",
    "crates/wos-agent-anthropic",
    "crates/wos-agent-claude-sdk",
    "crates/wos-agent-mcp",
    "crates/wos-agent-a2a",
    "crates/wos-agent-http"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

# fel-core lives in the Formspec spec repo. wos-spec resolves it via
# filesystem-sibling path coupling under formspec-stack/, the supported
# checkout topology. wos-spec does not build standalone until hosted
# published packages of fel-core exist.
[workspace.dependencies]
fel-core = { path = "../fel-core" }
stack-common-http = { path = "../stack-common/crates/stack-common-http" }
stack-common-typeid = { path = "../stack-common/crates/stack-common-typeid" }
trellis-service-client = { path = "../trellis/crates/trellis-service-client" }

[profile.dev]
# Trim debug metadata and increase codegen parallelism for faster compile-test loops.
debug = 1
incremental = true
codegen-units = 256

[profile.test]
# Keep tests debuggable while reducing compile overhead.
debug = 1
incremental = true
codegen-units = 256
