# WOS Studio (Authoring) — separate Cargo workspace.
#
# The Studio tier lives in this sibling workspace so a future repo
# extraction (`git filter-repo --subdirectory studio/`) produces a
# self-contained tree. Path dependencies into the parent (../crates/...)
# become submodule paths after extraction with no source changes.
#
# Studio crates MAY consume wos-core / wos-lint / wos-runtime ONLY via
# their `studio_api` published modules. The boundary is enforced by one
# workspace-wide `api_surface.rs` guard test at
# `studio/crates/wos-studio-types/tests/api_surface.rs`; see
# `studio/CLAUDE.md` for the rationale.

[workspace]
members = [
    "crates/wos-studio-types",
    "crates/wos-studio-model",
    "crates/wos-studio-lint",
    "crates/wos-studio-compiler",
    "crates/wos-studio-scenario",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Formspec-org/wos-spec"

[workspace.dependencies]
# Parent-tier deps consumed via path until repo extraction. After
# extraction these swap to submodule paths (e.g.,
# `path = "wos-spec/crates/wos-core"`) with no semantic change.
wos-core = { path = "../crates/wos-core" }
wos-lint = { path = "../crates/wos-lint" }
wos-runtime = { path = "../crates/wos-runtime" }

# Shared third-party deps (pin versions here so all Studio crates align).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
