[package]
name = "wos-agent-anthropic"
version.workspace = true
edition.workspace = true
description = "Anthropic SDK AgentInvoker adapter for WOS (skeleton; ADR 0064)"
license.workspace = true
repository.workspace = true

[dependencies]
wos-core = { path = "../wos-core" }

[dev-dependencies]
serde_json = "1"
