[package]
name = "wos-agent-claude-sdk"
version.workspace = true
edition.workspace = true
description = "Claude Agent SDK AgentInvoker adapter for WOS (skeleton; ADR 0064)"
license.workspace = true
repository.workspace = true

[dependencies]
wos-core = { path = "../wos-core" }

[dev-dependencies]
serde_json = "1"
