[package]
name = "wos-authoring"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
wos-core  = { path = "../wos-core" }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
indexmap  = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
