[package]
name = "wos-conformance"
version = "0.1.0"
edition = "2024"
description = "Dynamic conformance test runner for WOS workflows"
license = "AGPL-3.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wos-core = { path = "../wos-core" }
wos-formspec-binding = { path = "../wos-formspec-binding" }
wos-runtime = { path = "../wos-runtime" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
