[package]
name = "wos-conformance"
version.workspace = true
edition.workspace = true
description = "Dynamic conformance test runner for WOS workflows"
license.workspace = true
repository.workspace = true
autotests = false

[features]
default = []
# Restate adapter parity (`tests/r6_restate_conformance_slice.rs`); keeps default `cargo test -p wos-conformance` free of `wos-server-runtime-restate`.
restate-tests = [
  "dep:tokio",
  "dep:wos-server-ports",
  "dep:wos-server-runtime-restate",
]

[[test]]
name = "migration_conformance"
path = "tests/migration_conformance.rs"

[[test]]
name = "signature_profile"
path = "tests/signature_profile.rs"

[[test]]
name = "cross_stack_fixture_corpus"
path = "tests/cross_stack_fixture_corpus.rs"

[[test]]
name = "case_boundary_fixtures"
path = "tests/case_boundary_fixtures.rs"

[[test]]
name = "r6_restate_conformance_slice"
path = "tests/r6_restate_conformance_slice.rs"
required-features = ["restate-tests"]

[[bin]]
name = "wos-conformance-explain"
path = "src/bin/wos-conformance-explain.rs"

[[bin]]
name = "wos-conformance-diff"
path = "src/bin/wos-conformance-diff.rs"

[[bin]]
name = "wos-conformance-report"
path = "src/bin/wos-conformance-report.rs"

[[bin]]
name = "gen-golden-traces"
path = "src/bin/gen-golden-traces.rs"

[[bin]]
name = "wos-rule-coverage"
path = "src/bin/wos-rule-coverage.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
wos-core = { path = "../wos-core" }
wos-formspec-binding = { path = "../wos-formspec-binding" }
wos-lint = { path = "../wos-lint" }
wos-runtime = { path = "../wos-runtime" }
wos-server-ports = { path = "../../../workspec-server/crates/wos-server-ports", optional = true }
wos-server-runtime-restate = { path = "../../../workspec-server/crates/wos-server-runtime-restate", optional = true }

[dev-dependencies]
stack-common-typeid.workspace = true
integrity-bundle-fixtures = { path = "../../../integrity-stack/crates/integrity-bundle-fixtures" }
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
quick-xml = "0.36"
tempfile = "3"
wos-export = { path = "../wos-export" }
