[package]
name = "wos-core"
version = "0.1.0"
edition = "2024"
description = "Domain model and evaluation algorithm for WOS (Workflow Orchestration Standard)"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
fel-core = { path = "../../../crates/fel-core" }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["std", "v7"] }

[dev-dependencies]
indexmap = "2"
insta = { version = "1", features = ["json"] }
