[package]
name = "wos-core"
version.workspace = true
edition.workspace = true
description = "Domain model and evaluation algorithm for WOS (Workflow Orchestration Standard)"
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
fel-core = { path = "../../../fel-core" }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stack-common-typeid = { path = "../../../stack-common/crates/stack-common-typeid" }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
wos-events = { path = "../wos-events" }

[dev-dependencies]
indexmap = "2"
insta = { version = "1", features = ["json"] }
