[package]
name = "wos-events"
version.workspace = true
edition.workspace = true
description = "WOS event vocabulary, provenance payloads, and custody append wire types"
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
integrity-cbor = { path = "../../../integrity-stack/crates/integrity-cbor", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
stack-common-typeid = { path = "../../../stack-common/crates/stack-common-typeid" }
thiserror = "2"
