[package]
name = "wos-export"
version = "0.1.0"
edition = "2024"
description = "Provenance export to PROV-O, XES, and OCEL 2.0 (WOS Semantic Profile §§5–6)"
license = "AGPL-3.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wos-core = { path = "../wos-core" }
