[package]
name = "wos-export"
version.workspace = true
edition.workspace = true
description = "Provenance export to PROV-O, XES, and OCEL 2.0 (WOS Semantic Profile §§5–6)"
license.workspace = true
repository.workspace = true

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wos-core = { path = "../wos-core" }
