[package]
name = "wos-formspec-binding"
version.workspace = true
edition.workspace = true
description = "Formspec-specific contract adapter for wos-runtime"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "2"
wos-core = { path = "../wos-core" }
wos-runtime = { path = "../wos-runtime" }
