[package]
name = "wos-formspec-binding"
version.workspace = true
edition.workspace = true
description = "Formspec-specific contract adapter for wos-runtime"
license.workspace = true
repository.workspace = true

[dependencies]
formspec-canonical = { path = "../../../formspec/crates/formspec-canonical" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wos-core = { path = "../wos-core" }
wos-runtime = { path = "../wos-runtime" }
