[package]
name = "wos-formspec-binding"
version.workspace = true
edition.workspace = true
description = "Formspec-specific contract adapter for wos-runtime"
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
integrity-canonical = { path = "../../../integrity-stack/crates/integrity-canonical" }
integrity-cose = { path = "../../../integrity-stack/crates/integrity-cose" }
integrity-signature = { path = "../../../integrity-stack/crates/integrity-signature" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wos-core = { path = "../wos-core" }
wos-runtime = { path = "../wos-runtime" }
