[package]
name = "wos-lint"
version = "0.1.0"
edition = "2024"
description = "Static linter for WOS (Workflow Orchestration Standard) documents"
license = "AGPL-3.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
fel-core = { path = "../../../crates/fel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
