[package]
name = "wos-lint"
version.workspace = true
edition.workspace = true
description = "Static linter for WOS (Workflow Orchestration Standard) documents"
license.workspace = true
repository.workspace = true

[dependencies]
fel-core = { path = "../../../fel-core" }
indexmap = "2"
wos-core = { path = "../wos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
