[package]
name = "wos-mcp"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "wos-mcp"
path = "src/server.rs"

[dependencies]
wos-core = { path = "../wos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "process"] }
