[package]
name = "wos-runtime"
version = "0.1.0"
edition = "2024"
description = "Generic runtime orchestration for WOS processors"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
fel-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
wos-core = { path = "../wos-core" }
