[package]
name = "wos-runtime"
version.workspace = true
edition.workspace = true
description = "Generic runtime orchestration for WOS processors"
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
ciborium = "0.2"
chrono = { version = "0.4", features = ["serde"] }
fel-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
wos-core = { path = "../wos-core" }

[dev-dependencies]
jsonschema = "0.46"
