[package]
name = "wos-server-ports"
version = "0.1.0"
edition = "2024"
description = "Trait crate for wos-server adapter boundary — Storage, AuthProvider, and shared row/error types"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
