[package]
name = "wos-server-postgres"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
wos-server-ports = { path = "../wos-server-ports" }
trellis-store-postgres = { path = "../../trellis/crates/trellis-store-postgres" }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
wos-server-sqlite = { path = "../wos-server-sqlite" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
