[package]
name = "wos-server-runtime-local"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
socketioxide = { version = "0.18", features = ["state"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wos-core = { path = "../wos-core" }
wos-runtime = { path = "../wos-runtime" }
wos-server-ports = { path = "../wos-server-ports" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wos-server-sqlite = { path = "../wos-server-sqlite" }
