[package]
name = "wos-server-runtime-restate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
async-trait = "0.1"
wos-core = { path = "../wos-core" }
wos-runtime = { path = "../wos-runtime" }
wos-server-ports = { path = "../wos-server-ports" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
# 0.10+ requires rustc 1.90; workspace uses 1.89 — pin 0.8 until toolchain bump (WS-094 execution plan).
restate-sdk = "0.8.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
