[package]
name = "wos-server"
version = "0.1.0"
edition = "2024"
description = "Reference HTTP + Socket.IO server for WOS (Workflow Orchestration Standard)"
license = "Apache-2.0"
repository = "https://github.com/formspec/formspec"

[dependencies]
wos-server-ports     = { path = "../wos-server-ports" }
wos-server-sqlite    = { path = "../wos-server-sqlite", optional = true }
wos-server-postgres  = { path = "../wos-server-postgres", optional = true }
wos-server-auth-jwt  = { path = "../wos-server-auth-jwt", optional = true }
wos-server-auth-mock = { path = "../wos-server-auth-mock", optional = true }
wos-server-runtime-local = { path = "../wos-server-runtime-local", optional = true }
wos-server-runtime-restate = { path = "../wos-server-runtime-restate", optional = true }
wos-server-audit-postgres = { path = "../wos-server-audit-postgres", optional = true }
wos-core             = { path = "../wos-core" }
wos-runtime          = { path = "../wos-runtime" }
wos-lint             = { path = "../wos-lint" }
wos-export           = { path = "../wos-export" }
wos-conformance      = { path = "../wos-conformance" }
wos-formspec-binding = { path = "../wos-formspec-binding" }
fel-core.workspace = true

axum         = { version = "0.8", features = ["macros", "ws"] }
tokio        = { version = "1", features = ["full"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "trace", "limit"] }
http         = "1"
socketioxide = { version = "0.18", features = ["state"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "migrate",
    "json",
] }

async-trait   = "0.1"
argon2        = { version = "0.5", features = ["std"] }
rand          = "0.8"

uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2   = "0.10"
hex    = "0.4"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
url        = { version = "2", features = ["serde"] }
indexmap   = { version = "2", features = ["serde"] }

thiserror = "2"
anyhow    = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

clap    = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[features]
default = ["storage-sqlite", "auth-jwt", "auth-mock", "runtime-local"]
storage-sqlite = ["dep:wos-server-sqlite"]
storage-postgres = ["dep:wos-server-postgres"]
auth-jwt = ["dep:wos-server-auth-jwt"]
auth-mock = ["dep:wos-server-auth-mock"]
runtime-local = ["dep:wos-server-runtime-local"]
runtime-restate = ["dep:wos-server-runtime-restate"]
runtime-restate-stub = ["dep:wos-server-runtime-restate"]
audit-postgres = ["dep:wos-server-audit-postgres"]

[dev-dependencies]
tokio       = { version = "1", features = ["full", "test-util"] }
tempfile    = "3"
insta       = { version = "1", features = ["json"] }
reqwest     = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
