[package]
name = "wos-synth-anthropic"
version.workspace = true
edition.workspace = true
publish = false
description = "Anthropic-API Prompter implementation for wos-synth-core. Crate-level separation keeps reqwest/tokio/anthropic-sdk out of wos-synth-core's dependency graph."
license.workspace = true
repository.workspace = true

[dependencies]
wos-synth-core = { path = "../wos-synth-core" }
anthropic-sdk = "0.1.5"
async-trait   = "0.1"
serde_json    = "1"
