[package]
name = "wos-synth-core"
version.workspace = true
edition.workspace = true
publish = false
description = "Loop + Prompter trait + ToolContext trait + prompt templates for WOS LLM authoring. Provider-agnostic; no network dependencies."
license.workspace = true
repository.workspace = true

[dependencies]
wos-core        = { path = "../wos-core" }
wos-lint        = { path = "../wos-lint" }
wos-conformance = { path = "../wos-conformance" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
thiserror       = "2"
async-trait     = "0.1"

[dev-dependencies]
pollster = "0.4"
jsonschema = "0.46"
