[package]
name = "wos-synth-mock"
version.workspace = true
edition.workspace = true
publish = false
description = "Deterministic Prompter implementation for testing wos-synth-core without network access."
license.workspace = true
repository.workspace = true

[dependencies]
wos-synth-core = { path = "../wos-synth-core" }
async-trait    = "0.1"

[dev-dependencies]
pollster = "0.4"
