[package]
name = "wos-synth-spike"
version = "0.0.1"
edition = "2021"
publish = false
description = "Throwaway spike: LLM-driven WOS kernel synthesis with lint-driven repair loop"

[[bin]]
name = "wos-synth-spike"
path = "src/main.rs"

[dependencies]
wos-core        = { path = "../wos-core" }
wos-lint        = { path = "../wos-lint" }
anthropic-sdk   = "0.1.5"
clap            = { version = "4", features = ["derive"] }
reqwest         = { version = "0.12", features = ["json"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
thiserror       = "2"
tokio           = { version = "1", features = ["full"] }
