[package]
name = "wos-studio-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stage-4 readiness lint engine for Studio (Authoring) documents"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
wos-lint = { workspace = true }
wos-studio-model = { path = "../wos-studio-model" }
