[package]
name = "wos-studio-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed serde model for Studio (Authoring) document schemas — $wosStudio* markers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
