[package]
name = "wos-studio-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stage-6 Studio scenario simulator (16 canonical types, 43 SA-MUST-scn rules, expected-vs-actual trace bridge)"

[[bin]]
name = "wos-studio-simulate"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
wos-studio-compiler = { path = "../wos-studio-compiler" }
wos-studio-lint = { path = "../wos-studio-lint" }
